fix alignment

--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -234,11 +234,11 @@ nav
 		text-align center
 		background none
 		margin-left 0
-		padding-left 3px
+		padding em(10) 0
 	.landing__loreal-logo
 		text-align right
 	.landing__info
-		col(3.8)
+		col(4)
 		top 13px
 		margin-left 0
 		.phone .number
@@ -246,6 +246,8 @@ nav
 		.schedule
 			.days
 				col(12)
+				margin-left 0
+				margin-right 0
 				padding-bottom em(15)
 
 .content
